<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#336699"
        android:orientation="vertical" >


    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/homeButtonText"
            android:id="@+id/CurrentTag"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/incomeButtonText"
            android:clickable="true"
            android:onClick="openIncome" />

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/spendingButtonText"
            android:clickable="true"
            android:onClick="openSpending"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/about"
            android:clickable="true"
            android:onClick="openAbout" />
</LinearLayout>