<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:background="#ffffff">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:text="@string/spending"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="wrap_content"
        android:layout_height="260dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp" >

    </ListView>

    <EditText
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/value"
        android:layout_alignBottom="@+id/value"
        android:layout_alignLeft="@+id/textView3"
        android:layout_margin="1dp"
        android:layout_toLeftOf="@+id/button1"
        android:ems="10"
        android:inputType="text"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/listView1"
        android:layout_below="@+id/listView1"
        android:text="@string/amount" />

    <EditText
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_margin="1dp"
        android:layout_toLeftOf="@+id/description"
        android:ems="10"
        android:inputType="number">

    </EditText>

    <TextView
        android:id="@+id/TextView4"
        android:layout_width="160dp"
        android:layout_height="70sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="1dp"
        android:layout_marginRight="1dp"
        android:background="#8095ad"
        android:gravity="center"
        android:text="@string/homeButtonText"
        android:clickable="true"
        android:onClick="openHome"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/TextView4"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp"
        android:layout_toRightOf="@+id/TextView4"
        android:background="#8095ad"
        android:gravity="center"
        android:text="@string/optionsButtonText"
        android:clickable="true"
        android:onClick="openOptions"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:text="@string/description" />

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/description"
        android:layout_alignBottom="@+id/description"
        android:layout_alignParentRight="true"
        android:text="@string/add"
        android:gravity="center"
        android:onClick="executeAdd" />

</RelativeLayout>
