<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_make"
        android:id="@+id/textView2"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:textSize="16sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="10dp"
        android:textSize="32sp"
        android:textColor="#1b4e18"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency"
        android:id="@+id/textView"
        android:textSize="20sp"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/textView3"
        android:layout_marginLeft="10dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/per_hour"
        android:id="@+id/textView4"
        android:textSize="20sp"
        android:layout_alignTop="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:layout_marginLeft="10dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="_____________________________________________"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView2"
        android:layout_marginTop="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/that_is"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:layout_marginTop="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="20"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/textView3"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency"
        android:id="@+id/textView8"
        android:textSize="16sp"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignLeft="@+id/textView"
        android:layout_marginTop="3dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/per_minute"
        android:id="@+id/textView9"
        android:textSize="16sp"
        android:layout_alignTop="@+id/textView8"
        android:layout_alignLeft="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2400"
        android:id="@+id/textView10"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_below="@+id/textView7"
        android:layout_alignLeft="@+id/textView7"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency"
        android:id="@+id/textView11"
        android:textSize="16sp"
        android:layout_alignTop="@+id/textView10"
        android:layout_alignLeft="@+id/textView8"
        android:layout_marginTop="3dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/per_day"
        android:id="@+id/textView12"
        android:layout_alignTop="@+id/textView11"
        android:layout_alignLeft="@+id/textView9"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2400"
        android:id="@+id/textView13"
        android:layout_below="@+id/textView10"
        android:layout_alignLeft="@+id/textView10"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency"
        android:id="@+id/textView14"
        android:textSize="16sp"
        android:layout_alignTop="@+id/textView13"
        android:layout_alignLeft="@+id/textView11"
        android:layout_marginTop="3dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/per_month"
        android:id="@+id/textView15"
        android:layout_alignTop="@+id/textView14"
        android:layout_alignLeft="@+id/textView12"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="70sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/textView14"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp"
        android:background="#587eac"
        android:gravity="center"
        android:text="@string/homeButtonText"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="1dp"
        android:layout_marginRight="1dp"
        android:layout_toRightOf="@+id/textView"
        android:background="#8095ad"
        android:clickable="true"
        android:gravity="center"
        android:onClick="openOptions"
        android:text="@string/optionsButtonText"
        android:textColor="#ffffff" />

</RelativeLayout>