<com.your.worth.controller.view.viewgroup.HomeViewContainer xmlns:android="http://schemas.android.com/apk/res/android"
                                                              android:layout_width="match_parent"
                                                              android:layout_height="match_parent" >

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000033"
            android:orientation="vertical" >


        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/homeButtonText"
                android:id="@+id/CurrentTag"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textSize="25sp"
                android:textStyle="bold"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/incomeButtonText"
                android:clickable="true"
                android:onClick="openIncome" />

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/spendingButtonText"
                android:clickable="true"
                android:onClick="openSpending"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/about"
                android:clickable="true"
                android:onClick="openAbout" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:background="#ffffff">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="toggleMenu"
                    android:text="M" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/you_make"
                    android:id="@+id/textView2"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="80dp"
                    android:textSize="16sp"
                    android:textColor="@color/gray"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:id="@+id/hourWorth"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="5dp"
                    android:textSize="32sp"
                    android:textColor="#1b4e18"
                    android:textStyle="bold" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currency"
                    android:id="@+id/textView"
                    android:textSize="20sp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="3dp"
                    android:textStyle="bold"
                    android:textColor="@color/gray"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/per_hour"
                    android:id="@+id/textView4"
                    android:textSize="20sp"
                    android:layout_marginTop="3dp"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/gray"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <SurfaceView
                    android:layout_width="250dp"
                    android:layout_height="1dp"
                    android:id="@+id/textView5"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/gray"
                    android:focusable="false"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/that_is"
                    android:id="@+id/textView6"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="30dp"
                    android:textColor="@color/gray"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:id="@+id/minuteWorth"
                    android:layout_marginLeft="82dp"
                    android:layout_marginTop="5dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/gray"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currency"
                    android:id="@+id/textView8"
                    android:textSize="16sp"
                    android:layout_marginLeft="88dp"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/gray"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/per_minute"
                    android:id="@+id/textView9"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/gray"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:id="@+id/dayWorth"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginLeft="82dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/gray"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currency"
                    android:id="@+id/textView11"
                    android:textSize="16sp"
                    android:layout_marginLeft="88dp"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/gray"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/per_day"
                    android:id="@+id/textView12"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="3dp"
                    android:textSize="16sp"
                    android:textColor="@color/gray"/>
        </LinearLayout>


        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:id="@+id/monthWorth"
                    android:layout_marginLeft="82dp"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/gray"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currency"
                    android:id="@+id/textView14"
                    android:textSize="16sp"
                    android:layout_marginLeft="88dp"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/gray"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/per_month"
                    android:id="@+id/textView15"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="3dp"
                    android:textSize="16sp"
                    android:textColor="@color/gray"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:id="@+id/yearWorth"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="82dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/gray"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currency"
                    android:id="@+id/textView7"
                    android:textSize="16sp"
                    android:layout_marginLeft="88dp"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/gray"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/per_year"
                    android:id="@+id/textView10"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/gray"/>
        </LinearLayout>

    </LinearLayout>

</com.your.worth.controller.view.viewgroup.HomeViewContainer>