<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#ffffff">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content">
        <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/income"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/gray"/>

    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content">
        <ListView
                android:id="@+id/listView1"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

        </ListView>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content">

        <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="15dp"
                android:textColor="@color/gray"
                android:textSize="18sp"/>

        <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="55dp"
                android:textColor="@color/gray"
                android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content">
        <EditText
                android:id="@+id/value"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:ems="10"
                android:width="100dp"
                android:textColor="#000000"
                android:inputType="number"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="1dp"
                android:cursorVisible="true">

        </EditText>
        <EditText
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:ems="10"
                android:width="165dp"
                android:textColor="#000000"
                android:inputType="text"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="1dp"
                android:cursorVisible="true"/>
        <Button
                android:id="@+id/button1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="1dp"
                android:onClick="executeAdd"/>
    </LinearLayout>

</LinearLayout>